--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -6,5 +6,6 @@ $primaryHot: rgb(206, 37, 34);
 $primaryText: #E5E7E0;
 $secondaryText: rgb(110, 110, 107);
 $iconSize: 32px;
-$break-small: 420px;
+$break-small: 500px;
 $break-large: 1200px;
+$logoSize: 72px;
